  * checkpresentkey: When no remote is specified, try all remotes, not
    only ones that the location log says contain the key. This is what
    the documentation has always said it did.
  * Fix regression in external special remote handling: GETCONFIG did not
    return a value that was set with SETCONFIG immediately before.
    (Regression introduced in version 7.20200202.7)

 -- Joey Hess <id@joeyh.name>  Tue, 26 May 2020 10:20:52 -0400

git-annex (8.20200522) upstream; urgency=medium

  * Fix bug that made enableremote of S3 and webdav remotes, that
    have embedcreds=yes, fail to set up the embedded creds, so accessing
    the remotes failed. (Regression introduced in version 7.20200202.7)
  * addurl, importfeed: Avoid adding filenames with leading '.', instead
    it will be replaced with '_'.
  * addurl, importfeed: Allow '-' in filenames, as long as it's not the
    first character.
  * addurl --preserve-filename: New option, uses server-provided filename
    without any sanitization, but will fail if the filename has an obvious
    security problem like using an escape sequence or trying to escape
    the current directory.
  * whereis: Added --format option.
  * S3: Support signature=v4, to use S3 Signature Version 4.
    Some S3 services seem to require v4, while others may only
    support v2, which remains the default.
  * upgrade: When upgrade fails due to an exception, display it.
  * repair: Improve fetching from a remote with an url in host:path format.
  * git-lfs repos that encrypt the annexed content but not the git repo
    only need --force passed to initremote, allow enableremote and
    autoenable of such remotes without forcing again.
  * When accessing a remote fails, always display a reason why.
  * Display a warning message when a remote uses a protocol, such as
    git://, that git-annex does not support. Silently skipping such a
    remote was confusing behavior.
  * Also display a warning message when a remote, without a known uuid,